# pdf-generator

./: .env  Cargo.toml  LICENSE  README.md
samples/: request.json
src/: handlebars_ext.rs  lib.rs  main.rs  routes.rs  service.rs  templates.rs
templates/: book-order-report.html  customer-report.html  i18.ini
