[package]
name = "pdf-generator"
version = "0.1.0"

[dependencies]
rocket = "0.4.7"
rocket_codegen = "0.4.7"
rocket_contrib = { version = "0.4.7", features = ["json"]}

handlebars = "1.1.0"

serde = "1.0.123"
serde_json = "*"
serde_derive = "*"

dotenv = "0.15.0"

uuid = {version = "0.8.2", features = ["serde", "v4"]}

log = "0.4.14"
env_logger = "0.8.3"

rust-ini = "0.16.1"